Added Colorado College and TIGER Logo to repo

--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block meta %}
- <meta name="description" content="Colorado College Catalog View using Redis Library Services Platform with design assistance by 
+ <meta name="description" content="Colorado College Catalog View using Catalog Pull Platform. Design inspired by  
   Aaron Schmidt and Influx">
  <meta name="author" content="Jeremy Nelson">
 {% endblock %}
