--- a/catalog/templates/snippets/search-logging.html
+++ b/catalog/templates/snippets/search-logging.html
@@ -17,7 +17,9 @@
  </div>
  <div class="col-md-2 col-md-offset-5 user-log-btn" >
    <a class="pull-right"
-      href="{% if patron.is_authenticated %}logout">Log out{% else %}login>Log in{% endif %}</a>
+      href="#">Log in</a>
+  {# <a class="pull-right"
+      href="{% if patron.is_authenticated %}logout">Log out{% else %}login>Log in{% endif %}</a> #}
  </div>
 </div>
 
