--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Colorado College TIGER Catalog
+        TIGER, the Colorado College Library Catalog
 	{% block head_title %}{% endblock %}
     </title>
     <meta name="description" content="Colorado College Library's TIGER Catalog" >
@@ -12,8 +12,6 @@
     {% block more_meta %}{% endblock %}
     
     <link rel="shortcut icon" href="{{  url_for('static', filename='ico/favicon.png') }}">
-
-    <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
