--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -1,15 +1,21 @@
 {# START header #}
 <header>
  <div class="row">
+  {# START CC Logo #}
+  <div class="col-md-1">
+   <img src="{{ url_for('static', filename='img/tiger-logo.png') }}" style="float: right;height: 60px;width: auto; padding-top: .5em">
+
+  {# END CC Logo #}
+  </div>
   {# START Library Name #}
-  <div class="col-md-6 col-md-offset-1">
-   <h1>Colorado College</h1>
+  <div class="col-md-6">
+   <h1>Tutt Library Catalog</h1>
   {# END Library Name #}
   </div>
-
   {# START Library Hours #}
   <div class="col-xs-6 col-sm-6 col-md-5">
-    CC Hours
+    <h3>M-T: 7:45 am-2 am F: 7:45 am-10 pm<br>
+        Sa: 10 am-5 pm Su: 10 am-2 am</h3>
   {# END Library Hours #}
   </div>
 </div>
