--- a/catalog/templates/snippets/filter-panel.html
+++ b/catalog/templates/snippets/filter-panel.html
@@ -4,19 +4,15 @@
     <h3 class="panel-title">Filters</h3>
   </div>
   <div class="panel-body">
-   <div id="facetTree" class="tree">
-     <div class = "tree-folder" style="display:none;">
-	<div class="tree-folder-header">
-	  <i class="icon-folder-close"></i>
-           <div class="tree-folder-name"></div>
-	  </div>
-	   <div class="tree-folder-content"></div>
-	   <div class="tree-loader" style="display:none"></div>
-	</div>
-	<div class="tree-item" style="display:none;">
-          <i class="tree-dot"></i>
-	   <div class="tree-item-name"></div>
-	 </div>
-     </div>
+   <div id="facetTree">
+     <ul>
+      <li>Access</li>
+      <li>Format
+         <ul>
+
+         </ul>
+       </li>
+
+   </div>
   </div>
 </div>
