--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -6,6 +6,10 @@
  <meta name="author" content="Jeremy Nelson">
 {% endblock %}
 
+{% block more_css %}
+ <link href="{{ url_for('static', filename='css/jstree.style.min.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block navbar %}
  {% include 'snippets/header.html' %}
  {% include 'snippets/search-logging.html' %}
@@ -21,6 +25,7 @@
     <a href="#" data-bind="click: displayFilters" style="font-size: .75em"><span class="glyphicon glyphicon-forward"></span></a>
     </span>
    </h2>
+   <h2 class="text-danger" data-bind="visible: showError, text: errorMessage"></h2>
  {# END Search query display #}
  </div>
  {% include 'snippets/results.html' %}
