--- a/catalog/templates/snippets/footer.html
+++ b/catalog/templates/snippets/footer.html
@@ -1,6 +1,7 @@
 <footer class="row">
    <div class="col-md-1">
-    <img src="{{ url_for('static', filename='img/maps_48x48.png') }}" style="margin-top: 20px; margin-left: 15px">
+    <a href="https://www.google.com/maps?q=1021+North+Cascade+Avenue+Colorado+Springs,+Colorado&hl=en&sll=38.875684,-104.758359&sspn=0.46667,0.617294&t=h&hnear=1021+N+Cascade+Ave,+Colorado+Springs,+Colorado+80946&z=17&iwloc=A">
+     <img src="{{ url_for('static', filename='img/maps_48x48.png') }}" style="margin-top: 20px; margin-left: 15px"></a>
 
    </div>
    <div class="col-md-5">
