Working on autocomplete functionality

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -66,6 +66,8 @@
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/knockout.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/typeahead.bundle.min.js') }}"></script>
+
 
    {% block more_js %}{% endblock %} 
   </body>
