--- a/catalog/templates/snippets/search-logging.html
+++ b/catalog/templates/snippets/search-logging.html
@@ -5,7 +5,7 @@
     {{ search_form.csrf_token }}
     <h4>Find Library Items</h4>
     <div class="form-group">
-     {{ search_form.query(class_='form-control', 
+     {{ search_form.query(class_='form-control typeahead', 
                           **{'data-bind': 'value: searchQuery'}) }}
     </div>
     <div class="form-group">
