--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -28,7 +28,9 @@
    <h2 class="text-danger" data-bind="visible: showError, text: errorMessage"></h2>
  {# END Search query display #}
  </div>
- {% include 'snippets/results.html' %}
+</div>
+<div class="row">
+ {% include 'snippets/new-results.html' %}
 </div>
 {% endblock %}
 
