Solr suggestion and search now integrated, working on UI and semantic datastore

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -47,10 +47,7 @@
 
   {% block footer %}
   {# START footer DIV #}
-  <div id="footer">
-   <div class="container">
-     {% include 'snippets/footer-action-bar.html' %}
-   </div>
+    {% include 'snippets/footer.html' %}
   {# END footer DIV #}
   </div> 
  {% endblock %} 
