--- a/catalog/static/css/catalog.css
+++ b/catalog/static/css/catalog.css
@@ -14,12 +14,15 @@ footer a {
  background-color: rgb(51, 51, 51);
  border-top-right-radius: 1em;
  border-bottom-right-radius: 1em;
- color: rgb(255, 255, 255);
  font-weight: 700;
  margin-top: 2em;
  padding: .5em;
  text-transform: uppercase;
  width: 60%;
+}
+
+.form-search h4 {
+ color: rgb(255, 255, 255);
 }
 
 h2.search-query {
