--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -29,10 +29,13 @@
  {# END Search query display #}
  </div>
 </div>
-<div class="row" >
- <div class="col-md-8 col-md-offset-3">
+
+<div class="row">
+ <div class="col-md-8 col-md-offset-3" data-bind="visible: !showResults">
   <img src="{{ url_for('static', filename='img/cc-logo.png') }}" >
  </div>
+</div>
+<div class="row">
  {% include 'snippets/new-results.html' %}
 </div>
 {% endblock %}
