--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -22,7 +22,8 @@
    <h2 class="search-query" data-bind="visible: showResults">You searched for "<span class="search-terms" data-bind="text: searchQuery"></span>"
     <span class="search-stats" >
      <span data-bind="text: resultStartSlice"></span>-<span data-bind="text: resultEndSlice"></span>/<span data-bind="text: resultSize"></span>
-    <a href="#" data-bind="click: displayFilters" style="font-size: .75em"><span class="glyphicon glyphicon-forward"></span></a>
+     &nbsp;
+    {#<a href="#" data-bind="click: displayFilters" style="font-size: .75em"><span class="glyphicon glyphicon-forward"></span></a>#}
     </span>
    </h2>
    <h2 class="text-danger" data-bind="visible: showError, text: errorMessage"></h2>
