--- a/catalog/templates/detail.html
+++ b/catalog/templates/detail.html
@@ -17,8 +17,49 @@
    <div class="well well-sm">
      <h2>{% if work.headline %}{{ work.headline }}{% else %}{{ work.name }}{% endif %}</h2>
      <p class="lead">About this record {{ work['recordInfo'].get('recordOrigin') }}</p>
-
-
+     <table class="table table-striped table-bordered">
+	   <tr> 
+	    <th>Leader</th>
+	    <td colspan="10">{{ work['leader'] }}</td>
+	   </tr>
+	   <tr>
+	     <th>Tag</th>
+		 <th colspan="2">Indicators</th>
+		 <th colspan="10">Value or subfields</th>
+	   </tr>
+	   {% for field in work['fields'] %}
+	   {% set tag = field.keys()[0] %}
+	   {% if not 'subfields' in field[tag] %}
+	   <tr>
+	    <th>{{ tag }}</th>
+		<td></td>
+		<td></td>
+	    <td colspan="8">{{ field[tag] }}</td>
+	   </tr>
+	   {% else %}
+	   <tr>
+	    <th rowspan="2">{{ tag }}</th>
+		<th>Ind1</th>
+		<th>Ind2</th>
+		{% for subfield in field[tag]['subfields'] %}
+		  {% for subfield in subfield.keys() %}
+		   <th>{{ subfield }}</th>
+		  {% endfor %}
+		{% endfor %}
+	   </tr>
+	   <tr>
+	     <td>{% if field[tag]['ind1']|trim|length > 0 %}{{ field[tag]['ind1'] }}{% else %}|{% endif %}</td>
+		 <td>{% if  field[tag]['ind2']|trim|length > 0%}{{ field[tag]['ind2'] }}{% else %}|{% endif %}</td>
+		 {% for row in field[tag]['subfields'] %}
+		  {% for subfield in row.keys() %}
+		   <td>{{ row[subfield] }}</td>
+		  {% endfor %}
+		 {% endfor %}
+	   <tr>
+	   {% endif %}
+	   {% endfor %}
+	   
+	 </table>
    </div>
   </div>
 </div>
