Working on UI and views

--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -37,7 +37,7 @@
  </div>
 </div>
 <div class="row">
- {% include 'snippets/new-results.html' %}
+ {% include 'snippets/results.html' %}
 </div>
 {% endblock %}
 
