--- a/catalog/templates/snippets/search-logging.html
+++ b/catalog/templates/snippets/search-logging.html
@@ -1,6 +1,6 @@
 <div class="row">
  <div class="col-md-5">
-  <div class="form-search">
+  <div class="form-search" id="search-widget">
    <form class="form form-inline" role="form" method="post">
     {{ search_form.csrf_token }}
     <h4>Find Library Items</h4>
@@ -15,7 +15,7 @@
    </form>
   </div>
  </div>
- <div class="col-md-2 col-md-offset-5 user-log-btn" >
+ <div class="col-md-2 col-md-offset-5 user-log-btn" id='login-widget'>
    <a class="pull-right" data-bind="visible: !logging(), click: showLogin"
       href="#">Log in</a>
    <form data-bind="visible: logging, hasFocus: logging">
