Added mongo datastore blueprint, new solr search, and modified templates

--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -3,13 +3,13 @@
  <div class="row">
   {# START CC Logo #}
   <div class="col-md-1">
-   <img src="{{ url_for('static', filename='img/tiger-logo.png') }}" style="float: right;height: 60px;width: auto; padding-top: .5em">
+   <a href="/"><img src="{{ url_for('static', filename='img/tiger-logo.png') }}" style="float: right;height: 60px;width: auto; padding-top: .5em"></a>
 
   {# END CC Logo #}
   </div>
   {# START Library Name #}
   <div class="col-md-6">
-   <h1>Tutt Library Catalog</h1>
+   <h1><a href="/" style="color: white">Tutt Library Catalog</a></h1>
   {# END Library Name #}
   </div>
   {# START Library Hours #}
