--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="row">
- <div class="col-md-8 col-md-offset-3" data-bind="visible: !showResults">
+ <div class="col-md-8 col-md-offset-3" data-bind="visible: !showResults()">
   <img src="{{ url_for('static', filename='img/cc-logo.png') }}" >
  </div>
 </div>
