--- a/catalog/templates/detail.html
+++ b/catalog/templates/detail.html
@@ -15,7 +15,7 @@
 <div id="work-pane">
 <div class="row">
   <div class="col-md-10">
-   <h1>Title</h1>
+   <h1>{{ work['_id']|get_title }}</h1>
   </div>
   <div class="col-md-2">
    <div class="btn-group">
@@ -35,9 +35,13 @@
   <div class="col-md-2">
     <img src="{{ cover_art_url }}" class="img-responsive img-thumbnail">
   </div>
-  <div class="col-md-8">
+  <div class="col-md-6">
    <div class="well well-sm">
     {{ item|safe }}
+   </div>
+   <div class="col-md-4">
+     <div c
+
    </div>
   </div>
 </div>
