--- a/catalog/templates/snippets/footer.html
+++ b/catalog/templates/snippets/footer.html
@@ -17,3 +17,10 @@
 
    </div>
 </footer>
+<div class="container">
+ All source code copyrighted by Jeremy Nelson and Colorado College under MIT, Apache2, GPL2 licenses. 
+ <a href="http://www.walkingpaper.org/5979">UX inspiration</a> from Aaron Schmidt of Influx. Source code repository on Github at
+ <a href="https://github.com/jermnelson/tiger-catalog">https://github.com/jermnelson/tiger-catalog</a>
+</div>
+
+
