--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -16,6 +16,7 @@
 {% endblock %} 
 
 {% block body %}
+<div id="results-view">
 <div class="row">
  {# START Search query display #}
  <div class="col-md-12">
@@ -39,6 +40,7 @@
 <div class="row">
  {% include 'snippets/results.html' %}
 </div>
+</div>
 {% endblock %}
 
 {% block footer %}
@@ -50,9 +52,8 @@
 <script src="{{ url_for('static', filename='js/catalog.js') }}"></script>
 <script>
   $(function () { $('#facetTree').jstree(); });
-  
-  var catalogViewModel = new CatalogViewModel();
-  ko.applyBindings(catalogViewModel);
+ 
+  ko.applyBindings(new CatalogViewModel());
    
     
 </script>
