--- a/catalog/templates/snippets/search-logging.html
+++ b/catalog/templates/snippets/search-logging.html
@@ -16,7 +16,7 @@
   </div>
  </div>
  <div class="col-md-2 col-md-offset-5 user-log-btn" id='login-widget'>
-   <a class="pull-right" data-bind="click: showLoginFeedbackDlg"
+   <a class="pull-right" data-bind="click: loginAction"
       href="#">Log in</a>
    {#
    <form data-bind="visible: logging, hasFocus: logging">
