--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -56,6 +56,7 @@
     {% include 'snippets/help.html' %}
     {% include 'snippets/feedback.html' %}
     {% include 'snippets/login-feedback.html' %}
+    {#{% include 'snippets/filter-panel.html' %} #}
  {% endblock %} 
  {% block more_dialogs %}{% endblock %}  
     <!-- Bootstrap core JavaScript
