--- a/catalog/templates/snippets/filter-dlg.html
+++ b/catalog/templates/snippets/filter-dlg.html
@@ -7,19 +7,45 @@
       </div>
       <div class="modal-body">
          <form role="form">
+         {# START First Row #}
          <div class="row">
            <div class="col-md-4">
-              <div class="form-group">
+             <div class="form-group">
 
 
-              </div> 
+             </div> 
            </div>
            <div class="col-md-4">
+             <div class="form-group">
 
+             </div>
            </div>
            <div class="col-md-4">
+             <div class="form-group">
 
+             </div>
            </div>
+         {# END First Row #}
+         </div>
+         {# START Second Row #}
+         <div class="row">
+           <div class="col-md-4">
+             <div class="form-group">
+
+
+             </div> 
+           </div>
+           <div class="col-md-4">
+             <div class="form-group">
+              
+             </div>
+           </div>
+           <div class="col-md-4">
+             <div class="form-group">
+
+             </div>
+           </div>
+         {# END Second Row #}
          </div>
          </form>
       </div>
