--- a/catalog/templates/detail.html
+++ b/catalog/templates/detail.html
@@ -8,7 +8,6 @@
 
 {% block navbar %}
  {% include 'snippets/header.html' %}
- {% include 'snippets/search-logging.html' %}
 {% endblock %} 
 
 {% block body %}
@@ -16,6 +15,7 @@
 <div class="row">
   <div class="col-md-10">
    <h1>{{ work['_id']|get_title }}</h1>
+   <p class="lead">by {{ work['_id']|get_creators|safe }}</p>
   </div>
   <div class="col-md-2">
    <div class="btn-group">
@@ -25,8 +25,8 @@
         View <span class="caret"></span></a>
      <ul class="dropdown-menu" role="menu">
        <li><a href="#" data-bind="click: showMARC">MARC</a></li>
-       <li><a href="#">Schema.org</a></li>
-       <li><a href="#">BIBFRAME</a></li>
+       <li><a href="#" data-bind="click: showSchemaOrg">Schema.org</a></li>
+       <li><a href="#" data-bind="click: showBIBFRAME">BIBFRAME</a></li>
      </ul>
    </div>
   </div>
@@ -40,7 +40,6 @@
     {{ item|safe }}
    </div>
    <div class="col-md-4">
-     <div c
 
    </div>
   </div>
@@ -53,7 +52,9 @@
      <table class="table table-striped table-bordered">
 	   <tr> 
 	    <th>Leader</th>
-	    <td colspan="8">{{ work['leader'] }}</td>
+	    <td colspan="8" data-bind="click: editLeader">
+             {{ work['leader'] }}
+             </td>
 	   </tr>
 	   <tr>
 	     <th>Tag</th>
@@ -94,20 +95,33 @@
 	   
 	 </table>
    </div>
+   <div class="col-md-8" data-bind="visible: displaySchemaOrg">
+     {{ work|show_schema|safe }}
+     {% if '@type' in work and work['@type'].startswith('CreativeWork') %}
+      <h2>Schema.org</h2>
+      <dl class="dl-horizontal">
+       {% for key, value in work.iteritems() %}
+         {% if not key.startswith('@') %}
+          <dt>{{ key }}</dt>
+          <dd>{{ work.get(key) }}</dd>
+         {% endif %}
+       {% endfor %}
+      </dl>
+     {% endif %}
+   </div>
   </div>
 </div>
+
 </div>
 {% endblock %}
 
 {% block more_js %}
 <script src="{{ url_for('static', filename='js/catalog.js') }}"></script>
 <script> 
-  var loginViewModel = new LoginViewModel();
-  var searchViewModel = new SearchViewModel();
+//  var loginViewModel = new LoginViewModel();
   var workViewModel = new WorkViewModel();
 
-  ko.applyBindings(loginViewModel, $('#login-widget').get(0));
-  ko.applyBindings(searchViewModel, $('#search-widget').get(0));
+//  ko.applyBindings(loginViewModel, $('#login-widget').get(0));
   ko.applyBindings(workViewModel, $('#work-pane').get(0));
 </script>
 {% endblock %}
