--- a/catalog/templates/snippets/results.html
+++ b/catalog/templates/snippets/results.html
@@ -15,13 +15,13 @@
         {# START caption #}
         <div class="caption">
           <h3><span data-bind="text: title"></span><sup>
-           <a data-bind="attr: { href: workURL }">
+           <a data-bind="attr: { href: instanceURL }">
            <span style="font-size: .75em" 
                class="glyphicon glyphicon-info-sign"></span></a>
           </sup>
           </h3>
          <p data-bind="foreach: author" style="width: 175px"> 
-          <span data-bind="text: $data"></span>
+          <span data-bind="text: $data"></span> 
          </p>
          {# START action btn group #}
          <div class="btn-group-vertical">
